@@ -66,7 +66,7 @@ And now, in mostly alphabetical order, the scripts:
 - debchange (abbreviation dch): Modifies debian/changelog and manages version
   numbers for you.  It will either increment the version number or add a
   entry for the current version, depending upon the options given to it.
-  [libparse-debcontrol-perl, libsoap-lite-perl,  lsb-release]
+  [libparse-debcontrol-perl, libsoap-lite-perl]
 
 - debcheckout: checkout the development repository of a debian package
 
