@@ -132,7 +132,7 @@ files created by \fBpatch\fR are deleted.
 A changelog entry with the new version number is generated with the
 text \*(lqNew upstream release\*(rq.
 
-When used on Ubuntu systems, \fBlsb_release\fR detection is used to set
+When used on Ubuntu systems, \fBdpkg-vendor\fR detection is used to set
 the Debian revision to \*(lq0ubuntu1\*(rq.  You may change
 \fIdebian/changelog\fR manually afterwards.
 .SH "ACTIONS TAKEN ON A PATCH FILE"
@@ -164,7 +164,7 @@ with non-zero exit status.
 A changelog entry with the new version number is generated with the
 text \*(lqNew upstream release\*(rq.
 
-When used on Ubuntu systems, \fBlsb_release\fR detection is used to set
+When used on Ubuntu systems, \fBdpkg-vendor\fR detection is used to set
 the Debian revision to \*(lq0ubuntu1\*(rq.  You may change
 \fIdebian/changelog\fR manually afterwards.
 .SH "SEE ALSO"
