@@ -16,11 +16,12 @@ devscripts (2.10.74) UNRELEASED; urgency=low
   * Remove EOL whitespaces (Closes: #502525).
   * dget.1: Mention `debcheckout` under `SEE ALSO`. Thanks to Paul Menzel for
     the patch. (Closes: #596245)
+  * debchange, uupdate: Use dpkg-vendor instead of lsb_release.
 
   [ David Prévot ]
   * Partial manual pages convention review (Closes: #626015).
 
- -- Benjamin Drung <bdrung@debian.org>  Sun, 22 May 2011 17:27:26 +0200
+ -- Benjamin Drung <bdrung@debian.org>  Sun, 22 May 2011 19:37:52 +0200
 
 devscripts (2.10.73) unstable; urgency=low
 
